Correct open source link on about page.

--- a/static/about.html
+++ b/static/about.html
@@ -34,7 +34,7 @@
 				<h3>Privacy</h3>
 				<p>To use the Foursquare API Pickletrack is required to have a privacy policy. Pickletrack receives information from your browser when you access the service, including version, browser type, and operating system information. This information may be used to diagnose issues with the service. This information is shared with Google for analytics purposes. Who knows what they do with the data. Pickletrack accesses your location when you use the service to determine nearby venues. The location information may appear in server logs, but is not otherwise stored or shared with any service, including Google or Foursquare itself. Pickletrack will never use information stored in server logs for any reason except to diagnose issues with the service.</p>
 				<h3>Open Source</h3>
-				<p>Pickletrack is open source, please submit a pull request with any changes. <a href="https://github.com/pantaloons/RSA">https://github.com/pantaloons/RSA</a></p>
+				<p>Pickletrack is open source, please submit a pull request with any changes. <a href="https://github.com/pantaloons/pickletrack">https://github.com/pantaloons/pickletrack</a></p>
 				<h3>Feedback</h3>
 				<p>For any questions, concerns, or suggestions, please contact michael@mcgee.nz</p>
 			</div>
